include/altdss/capi/dss.h

    ALTDSS_CAPI_DLL int32_t TSData_Get_Count(void);
    ALTDSS_CAPI_DLL int32_t TSData_Get_First(void);
    ALTDSS_CAPI_DLL int32_t TSData_Get_Next(void);
    ALTDSS_CAPI_DLL const char* TSData_Get_Name(void);
    ALTDSS_CAPI_DLL void TSData_Set_Name(const char* Value);
    ALTDSS_CAPI_DLL void TSData_Get_AllNames(char*** ResultPtr, int32_t* ResultDims);
    ALTDSS_CAPI_DLL double TSData_Get_Rdc(void);
    ALTDSS_CAPI_DLL void TSData_Set_Rdc(double Value);
    ALTDSS_CAPI_DLL double TSData_Get_Rac(void);
    ALTDSS_CAPI_DLL void TSData_Set_Rac(double Value);
    ALTDSS_CAPI_DLL double TSData_Get_GMRac(void);
    ALTDSS_CAPI_DLL void TSData_Set_GMRac(double Value);
    ALTDSS_CAPI_DLL int32_t TSData_Get_GMRUnits(void);
    ALTDSS_CAPI_DLL void TSData_Set_GMRUnits(int32_t Value);
    ALTDSS_CAPI_DLL double TSData_Get_Radius(void);
    ALTDSS_CAPI_DLL void TSData_Set_Radius(double Value);
    ALTDSS_CAPI_DLL int32_t TSData_Get_RadiusUnits(void);
    ALTDSS_CAPI_DLL void TSData_Set_RadiusUnits(int32_t Value);
    ALTDSS_CAPI_DLL int32_t TSData_Get_ResistanceUnits(void);
    ALTDSS_CAPI_DLL void TSData_Set_ResistanceUnits(int32_t Value);
    ALTDSS_CAPI_DLL double TSData_Get_Diameter(void);
    ALTDSS_CAPI_DLL void TSData_Set_Diameter(double Value);
    ALTDSS_CAPI_DLL double TSData_Get_NormAmps(void);
    ALTDSS_CAPI_DLL void TSData_Set_NormAmps(double Value);
    ALTDSS_CAPI_DLL double TSData_Get_EmergAmps(void);
    ALTDSS_CAPI_DLL void TSData_Set_EmergAmps(double Value);
    ALTDSS_CAPI_DLL double TSData_Get_EpsR(void);
    ALTDSS_CAPI_DLL void TSData_Set_EpsR(double Value);
    ALTDSS_CAPI_DLL double TSData_Get_InsLayer(void);
    ALTDSS_CAPI_DLL void TSData_Set_InsLayer(double Value);
    ALTDSS_CAPI_DLL double TSData_Get_DiaIns(void);
    ALTDSS_CAPI_DLL void TSData_Set_DiaIns(double Value);
    ALTDSS_CAPI_DLL double TSData_Get_DiaCable(void);
    ALTDSS_CAPI_DLL void TSData_Set_DiaCable(double Value);
    ALTDSS_CAPI_DLL double TSData_Get_DiaShield(void);
    ALTDSS_CAPI_DLL void TSData_Set_DiaShield(double Value);
    ALTDSS_CAPI_DLL double TSData_Get_TapeLayer(void);
    ALTDSS_CAPI_DLL void TSData_Set_TapeLayer(double Value);
    ALTDSS_CAPI_DLL double TSData_Get_TapeLap(void);
    ALTDSS_CAPI_DLL void TSData_Set_TapeLap(double Value);
    ALTDSS_CAPI_DLL int32_t TSData_Get_idx(void);
    ALTDSS_CAPI_DLL void TSData_Set_idx(int32_t Value);
    ALTDSS_CAPI_DLL void* TSData_Get_Pointer(void);